[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/UI/Dialog/PopupDialogBox.gd" type="Script" id=1]
[ext_resource path="res://assets/Font/font5x7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/UI/DialogBox_160.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/DialogNext.png" type="Texture" id=4]
[ext_resource path="res://assets/Audio/cursLo.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/Audio/dialogue.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/Audio/cursHi.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/UI/Dialog/DialogBox_6x6.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="PopupDialogBox" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -135.0
margin_right = 240.0
margin_bottom = 135.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -59.0 ],
"_edit_use_anchors_": false
}

[node name="Text" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 180.0
margin_right = -96.0
margin_bottom = -44.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="NinePatchRect" parent="Text"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -0.0200005
size_flags_vertical = 3
texture = ExtResource( 8 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Text/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 2.0
margin_right = -6.0
margin_bottom = -1.90735e-05
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="RichTextLabel" parent="Text"]
margin_left = 6.0
margin_top = -14.0
margin_right = 217.0
margin_bottom = 2.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Text"]
visible = false
position = Vector2( 284, 41 )
texture = ExtResource( 4 )

[node name="OptionsRect" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -42.0
margin_right = 80.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="OptionsRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerNext" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[node name="TimerText" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="TimerDelaySelect" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AudioSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AudioMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="TimerNext" to="." method="_on_TimerNext_timeout"]
[connection signal="timeout" from="TimerText" to="." method="_on_TimerText_timeout"]
